--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,10 +17,14 @@
         tools:targetApi="31">
         <activity
             android:name=".activities.CartActivity"
+            android:theme="@style/AppTheme"
+            android:label="Shopping cart"
             android:exported="false" />
         <activity
             android:name=".activities.ProductDetailActivity"
-            android:exported="false" />
+            android:exported="false"
+
+            />
         <activity
             android:name=".activities.MainActivity"
             android:exported="true">
